--- a/stylesheets/waybar.css
+++ b/stylesheets/waybar.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "SF Pro Display", sans-serif;
+    font-family: "SFProDisplay Nerd Font", sans-serif;
     font-size: 14px;
     color: white;
     background: transparent;
